--- a/remark-template-basic.css
+++ b/remark-template-basic.css
@@ -23,18 +23,15 @@ body {
 }
 
 li { 
-    margin: 10px 0;
+    margin: 20px 0 0 0;
 }
-li li {
-    margin: 9px 0;
-    line-height: 22px;
+
+.remark-slide-content li li {
+    margin: 0 0 15px 0;
+/*    line-height: 22px;*/
     font-size: 20px;
 }
 
-.LineHeightShort {
-    line-height: 22px;
-    font-size: 20px;        
-}
 
 a {
     color: #00989e;
